<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/phaseLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phase_label_work"
        android:textColor="@android:color/secondary_text_light"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/timerDisplay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/timerDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timer_default"
        android:textColor="@android:color/primary_text_light"
        android:textSize="72sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".333" />

    <TextView
        android:id="@+id/doneListQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/donelist_question_future"
        android:textColor="@android:color/tertiary_text_light"
        app:layout_constraintBottom_toTopOf="@+id/doneListTextEntry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/doneListTextEntry"
        android:layout_width="312dp"
        android:layout_height="46dp"
        android:ems="10"
        android:hint="@string/donelist_textentry_default"
        android:inputType="textPersonName"
        android:textColor="@android:color/secondary_text_light"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.667" />
        <!--  TODO: look into autofill hints  -->

    <Button
        android:id="@+id/btnTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_timer_start"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/btnDoneList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/doneListTextEntry" />

    <Button
        android:id="@+id/btnDoneList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:padding="8dp"
        android:text="@string/button_donelist"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>